[package]
name = "egui_skia"
version = "0.5.0"
edition = "2024"
description = "egui_skia is a skia integration for the egui ui library. Render egui within a skia application or render skia in a egui application."
license = "MIT"
homepage = "https://github.com/lucasmerlin/egui_skia"
repository = "https://github.com/lucasmerlin/egui_skia"
keywords = ["skia", "egui", "skia-safe", "gui"]
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
winit = ["dep:egui-winit", "dep:raw-window-handle"]
cpu_fix = []

gl = ["skia-safe/gl"]
vulkan = ["skia-safe/vulkan"]

metal = ["skia-safe/metal"]

[profile.dev]
opt-level = 3

[dependencies]

egui = "0.34"
skia-safe = { version = "0.99", features = [] }
egui-winit = { version = "0.34", optional = true, default-features = false }
raw-window-handle = { version = "0.6", optional = true }

[dev-dependencies]
softbuffer = "0.4"
raw-window-handle = "0.6"
winit = { version = "0.30", features = ["rwh_06"] }
